--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ listen = 127.0.0.1
 ; TCP only: TCP port to listen on
 port = 8000
 ; UNIX only: path to the socket
-path = /etc/qsf/sock.d/qsf.sock
+path = /etc/nawa/sock.d/nawa.sock
 ; UNIX only: permissions of the socket (unsigned 32 bit integer) (strtol(mode, 0, 8))
 ; leave empty for no permission set / 0xffffffffUL
 ; permissions = 0xffffffffUL ; example from libfastcgipp
@@ -21,9 +21,9 @@ group = tinyp
 reuseaddr = on
 
 [privileges]
-; user soru should run as (if started as root)
+; user nawa should run as (if started as root)
 user = tinyp
-; group soru should run as (if started as root)
+; group nawa should run as (if started as root)
 group = tinyp
 
 [post]
@@ -46,7 +46,7 @@ threads = 1.0
 
 [application]
 ; Path to application to load
-path = ./cmake-build-debug/libqsftest.so
+path = ./cmake-build-debug/libnawatest.so
 
 [session]
 ; Name of the session cookie
@@ -80,7 +80,7 @@ cookie_samesite = strict
 cookie_expires = on
 ; How many seconds should a session be kept alive (server-side) without being touched by Session::start() or autostart?
 ; (i.e., in general, the maximum time a user can be inactive without having its session closed)
-; Sessions never outlive the runtime of the QSF process and cannot be set to being "infinite".
+; Sessions never outlive the runtime of the NAWA process and cannot be set to being "infinite".
 ; Use a database if you want to implement "permanent sessions"/"stay logged in".
 ; default value: 1800
 keepalive = 3600
