--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ add_executable(nawarun
         include/nawa/AppInit.h
         include/nawa/SmtpMailer.h
         include/nawa/Email.h
-        include/nawa/Universal.h
+        include/nawa/Any.h
         include/nawa/Engines/HashingEngine.h
         include/nawa/Engines/Argon2HashingEngine.h
         include/nawa/Engines/BcryptHashingEngine.h
