Add Docker docs

--- a/docker/nawa/config.ini
+++ b/docker/nawa/config.ini
@@ -1,29 +1,22 @@
 [fastcgi]
-; Listen to TCP port (tcp) or UNIX socket (unix)
+; Docker has to communicate with the host via TCP
 mode = tcp
-; TCP only: IP address (of an interface) to listen to (for all interfaces, use "all", without quotes)
+; Listen to all interfaces, so the port can be accessed by the outer world
 listen = all
-; TCP only: TCP port to listen on
+; Internal port to use with the -p option of Docker
 port = 8000
-; UNIX only: path to the socket
+; Irrelevant options for Docker
 path = /nawa/nawa.sock
-; UNIX only: permissions of the socket (unsigned 32 bit integer) (strtol(mode, 0, 8))
-; leave empty for no permission set / 0xffffffffUL
-; permissions = 0xffffffffUL ; example from libfastcgipp
-;permissions = 0600
 permissions =
-; UNIX only: owner of the socket
 owner = nawa
-; UNIX only: group of the socket
 group = nawa
-; set SO_REUSEADDR socket option
-; default value: on
+; SO_REUSEADDR not necessary for Docker
 reuseaddr = off
 
 [privileges]
-; user nawa should run as (if started as root)
+; user NAWA should run as (can be either nawa or root in Docker)
 user = nawa
-; group nawa should run as (if started as root)
+; group NAWA should run as (can be either nawa or root in Docker)
 group = nawa
 
 [post]
