Fix typo in main config.ini

--- a/config.ini
+++ b/config.ini
@@ -21,9 +21,9 @@ group = tinyp
 reuseaddr = on
 
 [privileges]
-; user nawa should run as (if started as root)
+; user NAWA should run as (if started as root)
 user = tinyp
-; group nawa should run as (if started as root)
+; group NAWA should run as (if started as root)
 group = tinyp
 
 [post]
