Change default value of cookie_secure in config.ini files

--- a/config.ini
+++ b/config.ini
@@ -59,9 +59,10 @@ cookie_name = SESSION
 ; -> boolean properties (Secure, HttpOnly): will be set if true/on anywhere,
 ;    integral properties (SameSite, Max-Age): value with highest precedence that is >0 will be taken
 
-; If session cookies may also be sent via insecure (HTTP) connections, set this to off
-; default value: on
-cookie_secure = on
+; Enable this option if session cookies may only be sent via secure (HTTPS) connections. Sessions will not work on
+; unencrypted (HTTP) connections if this option is set to on.
+; default value: off
+cookie_secure = off
 ; Set this to off if httpOnly attribute should not be set in the cookie (making it modifiable through JS, danger of XSS)
 ; (not yet supported by all browsers, but at least protects those with a compatible browser)
 ; default value: on
