Add config option for request handler

--- a/config.ini
+++ b/config.ini
@@ -43,6 +43,10 @@ concurrency = hardware
 ; number of threads, absolute (fixed concurrency) or relative (threads*hardware_concurrency) (double)
 ; default value: 1.0
 threads = 1.0
+; Request handler to use
+; default value: fastcgi
+; possible values: fastcgi, http (the latter one is still under development and not fully working)
+request_handler = fastcgi
 
 [application]
 ; Path to application to load
