Make HttpRequestHandler serve actual app content

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,17 @@ group = tinyp
 ; default value: on
 reuseaddr = on
 
+[http]
+; IP address (of an interface) to listen on
+; default value: 127.0.0.1
+listen = 127.0.0.1
+; TCP port to listen on (for port numbers < 1000, NAWA needs to be started as root)
+; default value: 8080
+port = 8080
+; set SO_REUSEADDR socket option
+; default value: on
+reuseaddr = on
+
 [privileges]
 ; user NAWA should run as (if started as root)
 user = tinyp
