--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Save build timestamp
-      run: echo "::set-env name=VERSION_TS::$(date +%s)"
+      run: echo "VERSION_TS=$(date +%s)" >> $GITHUB_ENV
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag docker.pkg.github.com/jatofg/nawa/nawa:0.6-${VERSION_TS}
     - name: Publish the Docker image
