Fix linking of shared library target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,9 @@ if(NOT cppnetlib_POPULATED)
     set(CPP-NETLIB_BUILD_TESTS OFF CACHE INTERNAL "")
     set(CPP-NETLIB_BUILD_EXAMPLES OFF CACHE INTERNAL "")
     add_subdirectory(${cppnetlib_SOURCE_DIR} ${cppnetlib_BINARY_DIR} EXCLUDE_FROM_ALL)
+    target_compile_options(cppnetlib-uri PUBLIC -fPIC)
+    target_compile_options(cppnetlib-server-parsers PUBLIC -fPIC)
+    target_compile_options(cppnetlib-client-connections PUBLIC -fPIC)
 endif()
 set(NETLIB_LIBRARIES cppnetlib-client-connections cppnetlib-server-parsers cppnetlib-uri)
 
