Rename environment variables, update docs

--- a/config.ini
+++ b/config.ini
@@ -56,7 +56,7 @@ concurrency = hardware
 threads = 1.0
 ; Request handler to use
 ; default value: fastcgi
-; possible values: fastcgi, http (the latter one is still under development and not fully working)
+; possible values: fastcgi, http (the latter one is still experimental)
 request_handler = fastcgi
 
 [application]
